--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
     "@types/node": "^14.11.8",
     "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/yup": "^0.29.9",
     "axios": "^0.20.0",
+    "formik": "^2.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
